[package]
name = "pulsecontrol"
version = "0.1.0"
authors = ["Simon Hafner <hafnersimon@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libpulse-binding = "2.16.1"
druid = { git = "https://github.com/linebender/druid.git" }